--- a/kustomize/base/matverseny-frontend/deployment.yaml
+++ b/kustomize/base/matverseny-frontend/deployment.yaml
@@ -46,12 +46,12 @@ spec:
               path: /
               port: http
           volumeMounts:
-            - mountPath: /var/lib/nginx/tmp/client_body
-              name: cache
+            - mountPath: /var/lib/nginx/tmp/
+              name: nginx_tmp
             - mountPath: /var/log/nginx
               name: logs
       volumes:
-        - name: cache
+        - name: nginx_tmp
           emptyDir: {}
         - name: logs
           emptyDir: {}
