Rename NGINX cache volume from nginx_tmp to nginx-tmp in deployment.yaml

--- a/kustomize/base/matverseny-frontend/deployment.yaml
+++ b/kustomize/base/matverseny-frontend/deployment.yaml
@@ -47,11 +47,11 @@ spec:
               port: http
           volumeMounts:
             - mountPath: /var/lib/nginx/tmp/
-              name: nginx_tmp
+              name: nginx-tmp
             - mountPath: /var/log/nginx
               name: logs
       volumes:
-        - name: nginx_tmp
+        - name: nginx-tmp
           emptyDir: {}
         - name: logs
           emptyDir: {}
